# rabbitmq-manager-sync

./: Cargo.toml
examples/: main.rs
src/: lib.rs
